Fixed for padding on the right side of overflowed channel names

--- a/sass/layout/_sidebar-left.scss
+++ b/sass/layout/_sidebar-left.scss
@@ -966,6 +966,7 @@
         text-overflow: ellipsis;
         overflow: hidden;
         display: flex;
+        margin-right: 16px;
 
         > div {
             text-overflow: ellipsis;
